--- a/package.json
+++ b/package.json
@@ -14,15 +14,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/stripe": "^5.0.10",
-    "ganache-cli": "^6.1.0",
-    "typescript": "^2.8.3",
-    "web3": "1.0.0-beta.34",
     "@types/fs-extra": "^5.0.2",
-    "zeppelin-solidity": "^1.9.0",
-    "truffle-hdwallet-provider": "0.0.5",
+    "@types/stripe": "^5.0.10",
     "fs-extra": "^6.0.0",
-    "stripe": "^5.8.0"
+    "ganache-cli": "^6.1.0",
+    "stripe": "^5.8.0",
+    "truffle-hdwallet-provider": "0.0.5",
+    "web3": "1.0.0-beta.34",
+    "zeppelin-solidity": "^1.9.0"
   },
   "dependencies": {}
 }
