--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ganache": "node node_modules/ganache-cli/build/cli.node.js --networkId 1337 -h localhost -p 7545 --secure --unlock 0 --defaultBalanceEther 10",
+    "start": "cd pwa; http-server -c-1 -o --cors",
+    "ipfs": "ipfs add -rQ ./pwa | qrcode-terminal"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "node-gyp": "^3.6.2",
-    "npm": "^6.0.0",
-    "openzeppelin-solidity": "1.9.0",
-    "python": "0.0.4",
+  "devDependencies": {
+    "@types/fs-extra": "^5.0.2",
+    "@types/stripe": "^5.0.10",
+    "fs-extra": "^6.0.0",
+    "ganache-cli": "^6.1.0",
+    "stripe": "^5.8.0",
     "truffle-hdwallet-provider": "0.0.5",
-    "zeppelin-solidity": "git+https://github.com/OpenZeppelin/zeppelin-solidity.git"
-  }
+    "web3": "1.0.0-beta.34",
+    "zeppelin-solidity": "^1.9.0"
+  },
+  "dependencies": {}
 }
