--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "ganache": "node node_modules/ganache-cli/build/cli.node.js --networkId 1337 -h localhost -p 7545 --secure --unlock 0 --defaultBalanceEther 10",
+    "ganache": "node node_modules/ganache-cli/build/cli.node.js --networkId 1337 -h localhost -p 7545 --secure --unlock 0 --defaultBalanceEther 10 --gasPrice 2000000000",
     "start": "cd pwa; http-server -c-1 -o --cors",
     "ipfs": "ipfs add -rQ ./pwa | qrcode-terminal"
   },
